<?xml version="1.0"?>
<package format="2">
  <name>rg2_msgs</name>
  <version>0.0.0</version>
  <description>Messages used by the RG2 family of grippers</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
